# Crucible

./: .gitignore  .prettierignore  ARCHITECTURE.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  warp_config.json
.gitea/workflows/: ci.yml  release.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  test_missing.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs  schema.rs
src-tauri/src/files/: mod.rs  search.rs  tree.rs  watcher.rs
src-tauri/src/git/: diff.rs  mod.rs  ops.rs  status.rs
src-tauri/src/pty/: attention.rs  error.rs  manager.rs  mod.rs  session.rs  turn_detector.rs
src/components/diff/: DiffView.tsx
src/components/editor/: Breadcrumbs.tsx  EditorTabs.tsx  EditorView.tsx
src/components/explorer/: ContextMenu.tsx  FileExplorer.tsx  FileTree.tsx
src/hooks/: useAutoSave.ts  useEditorCursor.ts  useFileWatcher.ts  useGit.ts  useGitDecorations.ts  useKeyboard.ts  useProblems.ts  useSession.ts
src/lib/: commandRegistry.ts  fuzzyMatch.ts  ipc.ts  keybindings.ts  lineDiff.ts  theme.ts  turnNavigation.ts
src/stores/: configStore.ts  editorStore.ts  fileStore.ts  paletteStore.ts  problemsStore.ts  sessionStore.ts  uiStore.ts
src/styles/: globals.css
tests/frontend/: App.test.tsx  setup.ts
(+98 files in other folders)
