[package]
name = "warp"
version = "0.1.0"
edition = "2021"
description = "AI agent IDE for Windows"
license = "MIT"

[lib]
name = "warp_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
git2 = "0.19"
notify = "7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
